# bvim

./: CHANGES  CREDITS  Makefile  Makefile.in  README  TODO  acconfig.h  blocks.c  blocks.h  bm_dos.c  bm_unix.c  bmore.1  bmore.c  bmore.c.old  bmore.h  bmore.help  bmore.hlp  bmore.man  bscript.c  bscript.h  buffers.c  bvi.1  bvi.c  bvi.doxygen  bvi.h  bvi.man  bvim.1  bvim.c  bvim.man  collaboration.c  comm.c  commands.c  commands.h  config.h  config.h.in  config.status  configure  configure.in  configure.scan  dosconf.h  (+23 more)
autom4te.cache/: output.0  requests  traces.0
bc/bmore/: BMORE.PRJ  BMORE.TCP  TCCONFIG.TC  TCDEF.DSK
bc/bvi/: BVI.DSK  BVI.PRJ  TCCONFIG.TC  TCPICK.TCP
html/: bmore.html  bmore_cmd.html  bmore_opt.html  bvi.css  colon.html  cursor.html  download.html  edit.html  german.html  index.html  install.html  man_bmore.html  man_bvi.html  new120.html  new130.html  new131.html  new132.html  overview.html  qt_bit.html  qt_edit.html  qt_find.html  qt_partial.html  qt_search.html  qt_set.html  qt_yank.html  quick.html  rpm.html  set.html  sitemap.html  yank.html
include/: blocks.h  bmath.h  bmore.h  bscript.h  buffers.h  bvi.h  bvim.h  collaboration.h  commands.h  data.h  doscur.h  keys.h  messages.h  patchlevel.h  plugins.h  search.h  set.h  signature.h  ui.h
lua/: Makefile  bitwise_operators_5.1.4_1.patch  jh-lua-binoctal-5.1.4.patch
plugins/: Makefile  checksum.lua  search.lua  test.c  test.lua  unittest.lua  visualisation.c
scripts/: checksum.lua  init.lua  search.lua  statistics.lua  test.lua  unittest.lua
